# pico_dm_spi_template

./: .gitmodules
src/: CMakeLists.txt  gt911.c  lv_conf.h  main.c  tft.c  tft_ssd1327.c  tft_st7735s.c  tft_st7789v.c  tft_st7796u.c
src/cmake/: eink-luatos.cmake  ssd1327.cmake  st7735.cmake  st7789.cmake  st7796.cmake
src/include/: tft.h
src/porting/: lv_port_disp_template.c
